--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                             </div>
                             <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
+                            <p class="text-xs sm:text-sm" style="color: #FFFFFF">Track Record: 1:32.238 (Michael Schumacher, Ferrari, 2004)</p>
+                            <p class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Winner: Max Verstappen (Red Bull, 2024)</p>
+                            <p class="text-xs sm:text-sm" style="color: #FFFFFF" id="f1-last-pole">Last Year's Pole Position: Max Verstappen (1:33.660, 2024)</p>
                             <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
                             <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
                             <p class="text-xs sm:text-sm mt-2"><strong class="underline">2025 Schedule:</strong></p>
