--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorsport Weather</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="/script.js"></script>
+    <script defer src="script.js"></script>
     <style>
         /* Custom CSS for marquee effect */
         @keyframes marquee {
@@ -44,10 +44,10 @@
         <!-- Tab Content -->
         <main class="mt-4 sm:mt-6">
             <!-- Motorsport Weather -->
-            <section id="motorsport" class="tab-content">
+            <section id="motorsport" class="tab-content active">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Motorsport & Weather</h2>
                 <!-- Upcoming Events Ticker -->
-                <div id="card-upcoming" class="bg-[url('/images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
+                <div id="card-upcoming" class="bg-[url('images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
                     <div class="marquee-container bg-gray-800 bg-opacity-70">
                         <span id="upcoming-schedule" class="marquee text-sm sm:text-base"></span>
                     </div>
@@ -55,7 +55,7 @@
                 <!-- Weather Tiles -->
                 <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
-                    <div id="card-zwartkops" class="weather-card bg-[url('/images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
                             <p id="zwartkops-temp">Temp: Loading...</p>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
-                    <div id="card-ultimate" class="weather-card bg-[url('/images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-ultimate" class="weather-card bg-[url('images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
                             <p id="ultimate-temp">Temp: Loading...</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <!-- Tile 3: The Rock Raceway, Brakpan -->
-                    <div id="card-rock" class="weather-card bg-[url('/images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">The Rock Raceway, Brakpan</h3>
                             <p id="rock-temp">Temp: Loading...</p>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <!-- Tile 4: Mahem Raceway, Pretoria -->
-                    <div id="card-mahem" class="weather-card bg-[url('/images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Mahem Raceway, Pretoria</h3>
                             <p id="mahem-temp">Temp: Loading...</p>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <!-- Tile 5: Formula 1 -->
-                    <div id="card-f1" class="weather-card bg-[url('/images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
                             <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
@@ -122,7 +122,7 @@
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Sport News</h2>
                 <div id="rugby" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
                     <!-- Card 1: International Rugby -->
-                    <div id="card-int-rugby" class="rugby-card bg-[url('/images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-int-rugby" class="rugby-card bg-[url('images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">International Rugby</h3>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <!-- Card 2: Provincial Rugby -->
-                    <div id="card-prov-rugby" class="rugby-card bg-[url('/images/Rugby2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-prov-rugby" class="rugby-card bg-[url('images/Rugby2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Provincial Rugby</h3>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <!-- Card 3: Local Rugby -->
-                    <div id="card-local-rugby" class="rugby-card bg-[url('/images/Rugby3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-local-rugby" class="rugby-card bg-[url('images/Rugby3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Local Rugby</h3>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
