--- a/index.html
+++ b/index.html
@@ -119,30 +119,14 @@
 
             <!-- Sport -->
             <section id="sport" class="tab-content hidden">
-                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Sport News</h2>
-                <div id="rugby-schedules" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">International Rugby Schedules</h2>
+                <div class="grid grid-cols-1 gap-4 sm:gap-6">
                     <!-- Card 1: International Rugby -->
                     <div id="card-int-rugby" class="weather-card bg-[url('images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">International Rugby</h3>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="int-rugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
-                        </div>
-                    </div>
-                    <!-- Card 2: Provincial Rugby -->
-                    <div id="card-prov-rugby" class="weather-card bg-[url('images/Rugby2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
-                            <h3 class="text-base sm:text-lg font-bold">Provincial Rugby</h3>
-                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="prov-rugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
-                        </div>
-                    </div>
-                    <!-- Card 3: Local Rugby -->
-                    <div id="card-local-rugby" class="weather-card bg-[url('images/Rugby3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
-                            <h3 class="text-base sm:text-lg font-bold">Local Rugby</h3>
-                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="local-rugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                            <ul id="intRugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
                     </div>
                 </div>
