--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             position: relative;
             height: 2rem;
         }
+        /* Double line spacing for rugby schedule */
+        #intRugby-schedule li {
+            line-height: 2; /* Doubles the line spacing */
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
