--- a/index.html
+++ b/index.html
@@ -3,172 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Motorsport Weather</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="script.js"></script>
     <style>
-        body {
-            background-color: #1a202c;
-            color: #e2e8f0;
-            font-family: Arial, sans-serif;
+        /* Custom CSS for marquee effect */
+        @keyframes marquee {
+            0% { transform: translateX(100vw); }
+            100% { transform: translateX(-100%); }
         }
-        .weather-icon-inline {
-            width: 40px;
-            height: 40px;
-            vertical-align: middle;
-            margin-right: 5px;
+        .marquee {
+            display: inline-block;
+            white-space: nowrap;
+            animation: marquee 20s linear infinite;
+            position: absolute;
+            will-change: transform;
         }
-        .weather-icon-large {
-            width: 60px;
-            height: 60px;
-            vertical-align: middle;
-        }
-        .tile {
-            background-color: #2d3748;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .tab {
-            padding: 10px 20px;
-            margin-right: 5px;
-            background-color: #4a5568;
-            color: white;
-            border: none;
-            border-radius: 5px 5px 0 0;
-            cursor: pointer;
-        }
-        .tab.active {
-            background-color: #3182ce;
-        }
-        .tab-content {
-            display: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
-        .hidden {
-            display: none;
-        }
-        .news-card {
-            margin-bottom: 20px;
-        }
-        #f1-track {
+        .marquee-container {
+            overflow: hidden;
             width: 100%;
-            max-width: 400px;
-            height: auto;
-            margin-top: 10px;
+            position: relative;
+            height: 2rem;
         }
-        #f1-flag {
-            width: 40px;
-            height: auto;
-            vertical-align: middle;
-            margin-left: 10px;
+        /* Double line spacing for rugby schedule */
+        #intRugby-schedule li {
+            line-height: 2; /* Doubles the line spacing */
+        }
+        /* Style for inline weather icons */
+        .weather-icon-inline {
+            width: 24px; /* Smaller size for inline display */
+            height: 24px;
+            vertical-align: middle; /* Aligns the icon with the text */
+            margin: 0 4px; /* Small margin on either side of the icon */
         }
     </style>
 </head>
-<body>
-    <div class="container mx-auto p-4">
-        <h1 class="text-4xl font-bold text-center mb-6 text-white">Dashboard</h1>
+<body class="bg-gray-900 text-white">
+    <div class="container mx-auto p-4 sm:p-6">
+        <!-- Header -->
+        <header class="text-center text-2xl sm:text-3xl font-bold mb-4 sm:mb-6 text-blue-400">
+            Motorsport Weather & News
+        </header>
 
-        <!-- Tabs -->
-        <div class="tabs flex justify-center mb-4">
-            <button class="tab active bg-blue-500" onclick="showTab('motorsport')">Motorsport</button>
-            <button class="tab" onclick="showTab('sport')">Sport</button>
-            <button class="tab" onclick="showTab('news')">News</button>
-        </div>
+        <!-- Navigation Tabs -->
+        <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto">
+            <button class="tab active px-4 py-2 rounded-lg text-base sm:text-lg bg-blue-500 hover:bg-blue-600 transition whitespace-nowrap" onclick="showTab('motorsport')">Motorsport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-700 hover:bg-gray-600 transition whitespace-nowrap" onclick="showTab('sport')">Sport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-700 hover:bg-gray-600 transition whitespace-nowrap" onclick="showTab('news')">News</button>
+        </nav>
 
         <!-- Tab Content -->
-        <div id="motorsport" class="tab-content">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Zwartkops Raceway -->
-                <div class="tile">
-                    <h2 class="text-2xl font-bold text-white">Zwartkops Raceway, Pretoria</h2>
-                    <p id="zwartkops-next-race" class="text-xl text-white">Next Race: Loading...</p>
-                    <p id="zwartkops-temp" class="text-lg text-gray-300">Temp: Loading...</p>
-                    <p id="zwartkops-condition" class="text-lg text-gray-300">Condition: Loading...</p>
-                    <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                    <ul id="zwartkops-schedule" class="text-gray-300 list-disc list-inside"></ul>
+        <main class="mt-4 sm:mt-6">
+            <!-- Motorsport Weather -->
+            <section id="motorsport" class="tab-content active">
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Motorsport & Weather</h2>
+                <!-- Upcoming Events Ticker -->
+                <div id="card-upcoming" class="bg-[url('images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
+                    <div class="marquee-container bg-gray-800 bg-opacity-70">
+                        <span id="upcoming-schedule" class="marquee text-sm sm:text-base"></span>
+                    </div>
                 </div>
-
-                <!-- Ultimate Raceway -->
-                <div class="tile">
-                    <h2 class="text-2xl font-bold text-white">Ultimate Raceway, Vereeniging</h2>
-                    <p id="ultimate-temp" class="text-lg text-gray-300">Temp: Loading...</p>
-                    <p id="ultimate-condition" class="text-lg text-gray-300">Condition: Loading...</p>
-                    <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                    <ul id="ultimate-schedule" class="text-gray-300 list-disc list-inside"></ul>
-                </div>
-
-                <!-- Rock Raceway -->
-                <div class="tile">
-                    <h2 class="text-2xl font-bold text-white">Rock Raceway, Brakpan</h2>
-                    <p id="rock-temp" class="text-lg text-gray-300">Temp: Loading...</p>
-                    <p id="rock-condition" class="text-lg text-gray-300">Condition: Loading...</p>
-                    <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                    <ul id="rock-schedule" class="text-gray-300 list-disc list-inside"></ul>
-                </div>
-
-                <!-- Mahem Raceway -->
-                <div class="tile">
-                    <h2 class="text-2xl font-bold text-white">Mahem Raceway, Pretoria</h2>
-                    <p id="mahem-temp" class="text-lg text-gray-300">Temp: Loading...</p>
-                    <p id="mahem-condition" class="text-lg text-gray-300">Condition: Loading...</p>
-                    <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                    <ul id="mahem-schedule" class="text-gray-300 list-disc list-inside"></ul>
-                </div>
-
-                <!-- Formula 1 -->
-                <div class="tile col-span-1 md:col-span-2">
-                    <h2 class="text-2xl font-bold text-white">Formula 1</h2>
-                    <p id="f1-next-race" class="text-xl text-white">Next Race: Loading...</p>
-                    <img id="f1-flag" src="" alt="Flag">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                        <div>
-                            <p id="f1-temp" class="text-lg text-gray-300">Temp: <span class="temp-value">Loading...</span></p>
-                            <p id="f1-condition" class="text-lg text-gray-300">Condition: <span class="condition-value">Loading...</span></p>
-                            <p id="f1-track-record" class="text-lg text-gray-300">Track Record: Loading...</p>
-                            <p id="f1-last-winner" class="text-lg text-gray-300">Last Year's Winner: Loading...</p>
-                            <p id="f1-last-pole" class="text-lg text-gray-300">Last Year's Pole Position: Loading...</p>
-                            <p id="f1-track-name" class="text-lg text-gray-300 font-semibold mt-2">Track: Loading...</p>
-                            <img id="f1-track" src="" alt="Track Layout">
+                <!-- Weather Tiles -->
+                <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6">
+                    <!-- Tile 1: Zwartkops Raceway, Pretoria -->
+                    <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
+                            <p id="zwartkops-temp">Temp: Loading...</p>
+                            <p id="zwartkops-condition">Condition: Loading...</p>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="zwartkops-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
-                        <div>
-                            <h3 class="text-xl font-semibold text-white mt-4">Session Times (GMT+2):</h3>
-                            <p id="f1-session-times" class="text-gray-300">Loading...</p>
-                            <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                            <ul id="f1-schedule" class="text-gray-300 list-disc list-inside"></ul>
+                    </div>
+                    <!-- Tile 2: Ultimate Raceway, Vereeniging -->
+                    <div id="card-ultimate" class="weather-card bg-[url('images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
+                            <p id="ultimate-temp">Temp: Loading...</p>
+                            <p id="ultimate-condition">Condition: Loading...</p>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="ultimate-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
+                    <!-- Tile 3: The Rock Raceway, Brakpan -->
+                    <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">The Rock Raceway, Brakpan</h3>
+                            <p id="rock-temp">Temp: Loading...</p>
+                            <p id="rock-condition">Condition: Loading...</p>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="rock-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
+                    <!-- Tile 4: Mahem Raceway, Pretoria -->
+                    <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">Mahem Raceway, Pretoria</h3>
+                            <p id="mahem-temp">Temp: Loading...</p>
+                            <p id="mahem-condition">Condition: Loading...</p>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
+                    <!-- Tile 5: Formula 1 -->
+                    <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
+                            <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
+                            <div class="mt-1">
+                                <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
+                                <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
+                            </div>
+                            <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
+                            <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
+                            <p id="f1-track-record" class="text-xs sm:text-sm" style="color: #FFFFFF">Track Record: Loading...</p>
+                            <p id="f1-last-winner" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Winner: Loading...</p>
+                            <p id="f1-last-pole" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Pole Position: Loading...</p>
+                            <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
+                            <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
+                            <p class="text-xs sm:text-sm mt-2"><strong class="underline">2025 Schedule:</strong></p>
+                            <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <!-- Upcoming Events -->
-            <div class="tile mt-6">
-                <p id="upcoming-schedule" class="text-lg text-gray-300">Loading upcoming events...</p>
-            </div>
-        </div>
-
-        <!-- Sport Tab -->
-        <div id="sport" class="tab-content hidden">
-            <div class="tile">
-                <h2 class="text-2xl font-bold text-white">International Rugby</h2>
-                <h3 class="text-xl font-semibold text-white mt-4">2025 Schedule:</h3>
-                <ul id="intRugby-schedule" class="text-gray-300 list-disc list-inside"></ul>
-            </div>
-        </div>
-
-        <!-- News Tab -->
-        <div id="news" class="tab-content hidden">
-            <div class="tile">
-                <h2 class="text-2xl font-bold text-white">Latest News</h2>
-                <div id="news-content" class="mt-4">
-                    <p class="text-gray-300">Loading news...</p>
+            <!-- Sport -->
+            <section id="sport" class="tab-content hidden">
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">International Rugby Schedules</h2>
+                <div class="grid grid-cols-1 gap-4 sm:gap-6">
+                    <!-- Card 1: International Rugby -->
+                    <div id="card-int-rugby" class="weather-card bg-[url('images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">International Rugby</h3>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="intRugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </section>
 
-    <script src="script.js"></script>
+            <!-- News -->
+            <section id="news" class="tab-content hidden">
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Latest News</h2>
+                <p class="text-center text-gray-400">Coming soon...</p>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
