--- a/index.html
+++ b/index.html
@@ -66,15 +66,16 @@
                 <!-- Weather Tiles -->
                 <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
-                    <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
-                            <h3 class="text-base sm:text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
-                            <p id="zwartkops-temp">Temp: Loading...</p>
-                            <p id="zwartkops-condition">Condition: Loading...</p>
-                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="zwartkops-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
-                        </div>
-                    </div>
+<div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+    <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+        <h3 class="text-base sm:text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
+        <h4 id="zwartkops-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4> <!-- New Next Race line -->
+        <p id="zwartkops-temp">Temp: Loading...</p>
+        <p id="zwartkops-condition">Condition: Loading...</p>
+        <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+        <ul id="zwartkops-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+    </div>
+</div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
                     <div id="card-ultimate" class="weather-card bg-[url('images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
