--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
-                            <h4 id="zwartkops-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4> <!-- New Next Race line -->
+                            <h4 id="zwartkops-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="zwartkops-temp">Temp: Loading...</p>
                             <p id="zwartkops-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
@@ -80,6 +80,7 @@
                     <div id="card-ultimate" class="weather-card bg-[url('images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
+                            <h4 id="ultimate-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="ultimate-temp">Temp: Loading...</p>
                             <p id="ultimate-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
@@ -90,6 +91,7 @@
                     <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">The Rock Raceway, Brakpan</h3>
+                            <h4 id="rock-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="rock-temp">Temp: Loading...</p>
                             <p id="rock-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
@@ -100,6 +102,7 @@
                     <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Mahem Raceway, Pretoria</h3>
+                            <h4 id="mahem-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <p id="mahem-temp">Temp: Loading...</p>
                             <p id="mahem-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
