--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <!-- News -->
             <section id="news" class="tab-content hidden">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Latest News</h2>
-                <p class="text-center text-gray-400">Coming soon...</p>
+                <div id="news-content"></div> <!-- Added a specific container for news -->
             </section>
         </main>
     </div>
