--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motorsport Weather</title>
+    <title>Motorsport Weather & News</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
     <style>
@@ -150,7 +150,7 @@
             <!-- News -->
             <section id="news" class="tab-content hidden">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Latest News</h2>
-                <div id="news-content"></div> <!-- Added a specific container for news -->
+                <div id="news-content"></div> <!-- Specific container for news -->
             </section>
         </main>
     </div>
