--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
         <!-- Navigation Tabs -->
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto">
-            <button class="tab active px-4 py-2 rounded-lg text-base sm:text-lg bg-blue-500 hover:bg-blue-600 transition whitespace-nowrap" onclick="showTab('motorsport')">Motorsport</button>
-            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-700 hover:bg-gray-600 transition whitespace-nowrap" onclick="showTab('sport')">Sport</button>
-            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-700 hover:bg-gray-600 transition whitespace-nowrap" onclick="showTab('news')">News</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('motorsport')">Motorsport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('sport')">Sport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('news')">News</button>
         </nav>
 
         <!-- Tab Content -->
