--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <!-- Navigation Tabs -->
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto">
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('motorsport')">Motorsport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('f1')">F1</button>
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('sport')">Sport</button>
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('news')">News</button>
         </nav>
@@ -64,7 +65,7 @@
                     </div>
                 </div>
                 <!-- Weather Tiles -->
-                <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6">
+                <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
                     <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
@@ -109,7 +110,14 @@
                             <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
                     </div>
-                    <!-- Tile 5: Formula 1 -->
+                </div>
+            </section>
+
+            <!-- F1 Tab -->
+            <section id="f1" class="tab-content hidden">
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Formula 1</h2>
+                <div class="grid grid-cols-1 gap-4 sm:gap-6">
+                    <!-- Tile: Formula 1 -->
                     <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
