--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- F1 Tab -->
             <section id="f1" class="tab-content hidden">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Formula 1</h2>
-                <div class="grid grid-cols-1 gap-4 sm:gap-6">
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                     <!-- Tile: Formula 1 -->
                     <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
@@ -135,6 +135,15 @@
                             <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
                             <p class="text-xs sm:text-sm mt-2"><strong class="underline">2025 Schedule:</strong></p>
                             <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
+                    <!-- Tile: Standings -->
+                    <div id="card-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">Standings</h3>
+                            <div id="f1-standings" class="text-xs sm:text-sm mt-2">
+                                <!-- Standings will be populated by script.js -->
+                            </div>
                         </div>
                     </div>
                 </div>
