--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motorsport Weather & News</title>
+    <title>Sport & News</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
     <style>
