--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <!-- F1 Tab -->
             <section id="f1" class="tab-content hidden">
-                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Formula 1</h2>
+                <img src="images/F1.png" alt="Formula 1 Logo" class="mx-auto mb-4 h-12 sm:h-14">
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                     <!-- Tile: Formula 1 -->
                     <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
