--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                                 <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
                             </div>
                             <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
-                            <img id="f1-track" src="images/ChinaTrack2.jpeg" class="w-full max-w-xs mt-2" alt="China Track Layout">
+                            <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
+                            <img src="images/ChinaTrack2.jpeg" class="w-full max-w-xs mt-2" alt="Additional China Track Image">
                             <p id="f1-track-record" class="text-xs sm:text-sm" style="color: #FFFFFF">Track Record: Loading...</p>
                             <p id="f1-last-winner" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Winner: Loading...</p>
                             <p id="f1-last-pole" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Pole Position: Loading...</p>
