--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             </div>
                             <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
-                            <img src="images/ChinaTrack2.jpg" class="w-full max-w-xs mt-2" alt="Additional China Track Image">
+                            <img src="images/ChinaTrack2.png" class="w-full max-w-xs mt-2" alt="Additional China Track Image">
                             <p id="f1-track-record" class="text-xs sm:text-sm" style="color: #FFFFFF">Track Record: Loading...</p>
                             <p id="f1-last-winner" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Winner: Loading...</p>
                             <p id="f1-last-pole" class="text-xs sm:text-sm" style="color: #FFFFFF">Last Year's Pole Position: Loading...</p>
