--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             vertical-align: middle; /* Aligns the icon with the text */
             margin: 0 4px; /* Small margin on either side of the icon */
         }
+        /* Style for driver and constructor images */
+        .driver-image, .constructor-image {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            vertical-align: middle;
+            margin-left: 8px;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
