--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         }
         /* Style for driver and constructor images */
         .driver-image, .constructor-image {
-            width: 257px;
-            height: 227px;
+            width: auto;
+            height: auto;
             object-fit: cover;
             vertical-align: middle;
             margin-left: 8px;
