--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             object-fit: cover;
             vertical-align: middle;
             margin-left: 8px;
+            margin-right: 8px;
         }
     </style>
 </head>
