--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         .driver-image, .constructor-image {
             width: auto;
             height: auto;
-            object-fit: cover;
+            object-fit: contain;
             vertical-align: middle;
             margin-left: 8px;
             margin-right: 8px;
