--- a/index.html
+++ b/index.html
@@ -37,13 +37,21 @@
             margin: 0 4px; /* Small margin on either side of the icon */
         }
         /* Style for driver and constructor images */
-        .driver-image, .constructor-image {
+        .driver-image {
             width: auto;
             height: auto;
             object-fit: contain;
             vertical-align: middle;
             margin-left: 8px;
             margin-right: 8px;
+        }
+        .constructor-image {
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            vertical-align: middle;
+            margin-left: 8px;
+            margin-rigth: 8px;
         }
     </style>
 </head>
