--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             width: auto;
             height: auto;
             object-fit: contain;
-            vertical-align: middle;
+            vertical-align: left;
             margin-left: 8px;
             margin-rigth: 8px;
         }
