--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-4 sm:p-6">
         <!-- Header -->
-        <header class="text-center text-2xl sm:text-3xl font-bold mb-4 sm:mb-6 text-blue-400">
+        <header class="text-center text-2xl sm:text-3xl font-bold mb-4 sm:mb-6 text-white">
             Sport & News
         </header>
 
