--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <main class="mt-4 sm:mt-6">
             <!-- Motorsport Weather -->
             <section id="motorsport" class="tab-content active">
-                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Motorsport & Weather</h2>
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-white mb-4">Motorsport & Weather</h2>
                 <!-- Upcoming Events Ticker -->
                 <div id="card-upcoming" class="bg-[url('images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
                     <div class="marquee-container bg-gray-800 bg-opacity-70">
