--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             vertical-align: left;
             margin-left: 1px;
         }
+        /* Style for ticker icons */
+        .ticker-icon {
+            width: 20px;
+            height: 20px;
+            vertical-align: middle;
+            margin: 0 4px;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
