--- a/index.html
+++ b/index.html
@@ -7,59 +7,60 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
     <style>
-        /* Custom CSS for marquee effect */
-        @keyframes marquee {
-            0% { transform: translateX(100vw); }
-            100% { transform: translateX(-100%); }
-        }
-        .marquee {
-            display: inline-block;
-            white-space: nowrap;
-            animation: marquee 20s linear infinite;
-            position: absolute;
-            will-change: transform;
-        }
-        .marquee-container {
-            overflow: hidden;
-            width: 100%;
-            position: relative;
-            height: 2rem;
-        }
-        /* Double line spacing for rugby schedule */
-        #intRugby-schedule li {
-            line-height: 2; /* Doubles the line spacing */
-        }
-        /* Style for inline weather icons */
-        .weather-icon-inline {
-            width: 24px; /* Smaller size for inline display */
-            height: 24px;
-            vertical-align: middle; /* Aligns the icon with the text */
-            margin: 0 4px; /* Small margin on either side of the icon */
-        }
-        /* Style for driver and constructor images */
-        .driver-image {
-            width: auto;
-            height: auto;
-            object-fit: contain;
-            vertical-align: middle;
-            margin-left: 8px;
-            margin-right: 8px;
-        }
-        .constructor-image {
-            width: auto;
-            height: auto;
-            object-fit: contain;
-            vertical-align: left;
-            margin-left: 1px;
-        }
-        /* Style for ticker icons */
-        .ticker-icon {
-            width: 20px;
-            height: 20px;
-            vertical-align: middle;
-            margin: 0 4px;
-        }
-    </style>
+    /* Custom CSS for marquee effect */
+    @keyframes marquee {
+        0% { transform: translateX(100vw); }
+        100% { transform: translateX(-100%); }
+    }
+    .marquee {
+        display: inline-block;
+        white-space: nowrap;
+        animation: marquee 20s linear infinite;
+        position: absolute;
+        will-change: transform;
+    }
+    .marquee-container {
+        overflow: hidden;
+        width: 100%;
+        position: relative;
+        height: 2rem;
+    }
+    /* Double line spacing for rugby schedule */
+    #intRugby-schedule li {
+        line-height: 2;
+    }
+    /* Style for inline weather icons */
+    .weather-icon-inline {
+        width: 24px;
+        height: 24px;
+        vertical-align: middle;
+        margin: 0 4px;
+    }
+    /* Style for driver and constructor images */
+    .driver-image {
+        width: auto;
+        height: auto;
+        object-fit: contain;
+        vertical-align: middle;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+    .constructor-image {
+        width: auto;
+        height: auto;
+        object-fit: contain;
+        vertical-align: left;
+        margin-left: 1px;
+    }
+    /* Style for ticker icons */
+    .ticker-icon {
+        width: 20px;
+        height: 20px;
+        display: inline;
+        vertical-align: middle;
+        margin: 0 4px;
+    }
+</style>
 </head>
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-4 sm:p-6">
