--- a/index.html
+++ b/index.html
@@ -263,5 +263,11 @@
             </section>
         </main>
     </div>
+    <!-- Inside the <body> tag, at the bottom -->
+<script src="common.js"></script>
+<script src="motorsport.js"></script>
+<script src="f1.js"></script>
+<script src="sport.js"></script>
+<script src="news.js"></script>
 </body>
 </html>
