--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
         </main>
     </div>
     <!-- Inside the <body> tag, at the bottom -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 <script src="common.js"></script>
 <script src="motorsport.js"></script>
 <script src="f1.js"></script>
