--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                     </div>
                                     <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
                                     <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
-                                    <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
+                                    <p id="f1-temp" class="temp-label font-bold" style="color: #E10600">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
                                     <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
                                 </div>
                             </div>
